asset links fixed and _redirects added

--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -10,22 +10,22 @@
         </div> -->
       <div class="avatar1">
         <a href="https://codepen.io/MarioDesigns/">
-          <img src="http://localhost:4200/assets/image/png/cute-tooth.png" alt="Skytsunami" />
+          <img src="assets/image/png/cute-tooth.png" alt="Skytsunami" />
         </a>
       </div>
       <div class="avatar2">
         <a href="https://codepen.io/MarioDesigns/">
-          <img src="http://localhost:4200/assets/image/png/f1.png" alt="Skytsunami" />
+          <img src="assets/image/png/f1.png" alt="Skytsunami" />
         </a>
       </div>
       <div class="avatar3">
         <a href="https://codepen.io/MarioDesigns/">
-          <img src="http://localhost:4200/assets/image/png/f2.png" alt="Skytsunami" />
+          <img src="assets/image/png/f2.png" alt="Skytsunami" />
         </a>
       </div>
       <div class="avatar4">
         <a href="https://codepen.io/MarioDesigns/">
-          <img src="http://localhost:4200/assets/image/png/f4.png" alt="Skytsunami" />
+          <img src="assets/image/png/f4.png" alt="Skytsunami" />
         </a>
       </div>
 
