floating images responsive

--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -29,7 +29,7 @@
         </a>
       </div>
 
-      <div class="row align-items-center justify-content-center">
+      <div class="row align-items-center justify-content-center mid-content">
         <div class="col-lg-10 col-xl-9" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
           <div class="hero-content section-title light-mode-texts text-center">
             <h4 class="pre-title text-green gr-text-12 text-uppercase mb-10">making your life easy</h4>
