--- a/src/app/_pages/home/home.component.css
+++ b/src/app/_pages/home/home.component.css
@@ -47,7 +47,7 @@
 
 .avatar1 {
   position:absolute;
-  left:15%;
+  left:5%;
   top: 20%;
 	width: 75px;
 	max-height: 75px;
@@ -61,7 +61,7 @@
 }
 .avatar2 {
   position:absolute;
-  right:15%;
+  right:10%;
   top: 20%;
 	width: 75px;
 	max-height: 75px;
@@ -75,8 +75,8 @@
 }
 .avatar3 {
   position:absolute;
-  left:15%;
-  bottom: 20%;
+  left:5%;
+  bottom: 15%;
 	width: 75px;
 	max-height: 75px;
 	/* box-sizing: border-box;
@@ -89,8 +89,8 @@
 }
 .avatar4 {
   position:absolute;
-  right:15%;
-  bottom: 20%;
+  right:10%;
+  bottom: 15%;
 	width: 75px;
 	max-height: 75px;
 	/* box-sizing: border-box;
@@ -127,3 +127,20 @@
 		height: auto;
 	}
 } */
+
+
+@media (max-width: 1024px) {
+  .avatar1 img, .avatar2 img,.avatar3 img,.avatar4 img  { width: auto; max-height: 100px; }
+
+  .mid-content{
+    margin: 25px 0px;
+  }
+}
+
+@media (max-width: 720px) {
+  .avatar1 img, .avatar2 img,.avatar3 img,.avatar4 img  { width: auto; max-height: 65px; }
+
+  .mid-content{
+    margin: 25px 0px;
+  }
+}
