page header fixed and components added

--- a/src/app/_pages/about/about.component.html
+++ b/src/app/_pages/about/about.component.html
@@ -5,8 +5,8 @@
     <div class="row  justify-content-center mt-md-6 pt-24 pt-lg-29">
       <div class="col-xl-8 col-lg-9">
         <div class="px-md-12 text-center mb-11 mb-lg-14">
-          <h2 class="title gr-text-2 mb-9 mb-lg-12">Our story</h2>
-          <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next consultancy website within few minutes.</p>
+          <h2 class="title gr-text-2 mb-9 mb-lg-12">Our Story</h2>
+          <p class="gr-text-8 mb-0">Toothpick dental staff is privately owned rapidly growing recruitment agency specialises in recruiting dental nurses and receptionists.</p>
         </div>
       </div>
       <div class="col-12">
@@ -22,13 +22,15 @@
     <div class="row">
       <div class="col-lg-6 mb-7 mb-lg-0">
         <div class="pr-xl-13">
-          <h2 class="gr-text-3 mb-0">We are here to help the customers to get their success.</h2>
+          <h2 class="gr-text-3 mb-0">Here to help.</h2>
         </div>
       </div>
       <div class="col-lg-6">
         <div class="pr-xl-13">
-          <p class="gr-text-8 mb-7 mb-lg-10">We share common trends and strategies for improving your rental income and making sure you stay in high demand of service. </p>
-          <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build a page without coding any other page.</p>
+          <p class="gr-text-8 mb-7 mb-lg-10">Having experienced various problems while in the business, we truly understand that Staff shortage is the biggest challenge to run your business smoothly and meet the patients’ expectations.
+            With that, we are here to help you with all your staffing requirements!
+ </p>
+          <!-- <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build a page without coding any other page.</p> -->
         </div>
       </div>
     </div>
@@ -56,9 +58,11 @@
       </div>
       <div class="col-sm-8 col-lg-6 col-xl-5 offset-lg-1 offset-lg-1 offset-xl-0">
         <div class="content-text">
-          <h2 class="gr-text-3 mb-7 mb-lg-11">High skilled coders <br class="d-none d-lg-block"> from worldwide.</h2>
-          <p class="gr-text-8 mb-7 mb-lg-10">We share common trends and strategies for improving your rental income and making sure you stay in high demand of service. </p>
-          <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build a page without coding any other page.</p>
+          <h2 class="gr-text-3 mb-7 mb-lg-11">Our Services and Areas.</h2>
+          <p class="gr-text-8 mb-7 mb-lg-10">We provide services to wide range of businesses within the industry including NHS/Private practices, specialist practices, NHS hospital Trusts, Community dental clinics, Military and corporate business across five counties: Berkshire, Hampshire, Hampshire, Buckinghamshire and Oxfordshire.
+
+ </p>
+          <!-- <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build a page without coding any other page.</p> -->
         </div>
       </div>
     </div>
@@ -71,7 +75,7 @@
       <div class="col-lg-9 col-xl-8">
         <div class="section-title text-center px-md-12 mb-lg-17 mb-10">
           <h2 class="gr-text-3 mb-7 mb-lg-8">Meet our team</h2>
-          <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next consultancy website within few minutes.</p>
+          <p class="gr-text-8 mb-0">Our hard-working and friendly staffs to help you.</p>
         </div>
       </div>
     </div>
@@ -82,7 +86,7 @@
             <img src="assets/image/inner/team-image-1.png" alt="" class="w-100">
           </div>
           <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Joe Bridges</h3>
+            <h3 class="gr-text-7 mb-2">Rekha Rai</h3>
             <p class="gr-text-9 mb-0 line-height-1">Founder</p>
           </div>
         </div>
@@ -93,8 +97,8 @@
             <img src="assets/image/inner/team-image-2.png" alt="" class="w-100">
           </div>
           <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Jeffrey Walters</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Cheif Executive Officer</p>
+            <h3 class="gr-text-7 mb-2">Sumnima Limbu</h3>
+            <p class="gr-text-9 mb-0 line-height-1">Administrator</p>
           </div>
         </div>
       </div>
@@ -104,8 +108,8 @@
             <img src="assets/image/inner/team-image-3.png" alt="" class="w-100">
           </div>
           <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Jason Reed</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Chief Technology Officer</p>
+            <h3 class="gr-text-7 mb-2">Mausam Ninglekhu</h3>
+            <p class="gr-text-9 mb-0 line-height-1">Manager</p>
           </div>
         </div>
       </div>
@@ -115,8 +119,8 @@
             <img src="assets/image/inner/team-image-4.png" alt="" class="w-100">
           </div>
           <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Nellie Padilla</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Creative Director</p>
+            <h3 class="gr-text-7 mb-2">Pratik Dahal</h3>
+            <p class="gr-text-9 mb-0 line-height-1">Programmer</p>
           </div>
         </div>
       </div>
@@ -126,8 +130,8 @@
             <img src="assets/image/inner/team-image-5.png" alt="" class="w-100">
           </div>
           <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Dean Bell</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Lead Programmer</p>
+            <h3 class="gr-text-7 mb-2">Sabil Shrestha</h3>
+            <p class="gr-text-9 mb-0 line-height-1">Programmer</p>
           </div>
         </div>
       </div>
@@ -137,8 +141,8 @@
             <img src="assets/image/inner/team-image-6.png" alt="" class="w-100">
           </div>
           <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Pearl Brooks</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Digital Marketer</p>
+            <h3 class="gr-text-7 mb-2">Ishan Chemjong</h3>
+            <p class="gr-text-9 mb-0 line-height-1">Programmer</p>
           </div>
         </div>
       </div>
