--- a/src/app/_pages/career/career.component.html
+++ b/src/app/_pages/career/career.component.html
@@ -1,6 +1,19 @@
 <app-header></app-header>
 
-<div class="inner-banner bg-default-6 pt-24 pt-lg-30 pb-lg-15">
+<div class="inner-banner">
+  <div class="container">
+    <div class="row  justify-content-center mt-md-6 pt-24 pt-lg-29">
+      <div class="col-xl-8 col-lg-9">
+        <div class="px-md-12 text-center mb-11 mb-lg-14">
+          <h2 class="title gr-text-2 mb-9 mb-lg-12">Join Our Team</h2>
+          <p class="gr-text-8 mb-0">If you are looking for a change of scenery within the dental industry, then locuming would be a great opportunity to do that. Being an agency dental nurse is a very rewarding job.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="inner-banner">
   <div class="container">
     <div class="row  justify-content-center pt-5">
       <div class="col-xl-8 col-lg-9">
@@ -11,7 +24,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Video Section -->
 <div class="video-section bg-image py-28 py-lg-35 dark-mode-texts " style="background-image: url(assets/image/inner/video-bg-2.png);">
   <div class="container">
@@ -36,7 +49,7 @@
       <div class="col-xl-8 col-lg-9">
         <div class="px-md-15 text-center mb-13 mb-lg-22">
           <h2 class="title gr-text-3 mb-9">Why you should join us?</h2>
-          <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next consultancy website within few minutes.</p>
+          <p class="gr-text-8 mb-0">Broaden your horizon!</p>
         </div>
       </div>
     </div>
@@ -50,7 +63,7 @@
           </div>
           <div class="card-texts pr-xl-10">
             <h3 class="gr-text-6 mb-7 gr-text-exerpt">Personal growth</h3>
-            <p class="gr-text-9 mb-0">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <p class="gr-text-9 mb-0">You will have the opportunities to learn ,train, work, and meet new businesse and people.</p>
           </div>
         </div>
         <!-- ./feature-widget ends -->
@@ -63,7 +76,7 @@
           </div>
           <div class="card-texts pr-xl-10">
             <h3 class="gr-text-6 mb-7 gr-text-exerpt">Competitive salary</h3>
-            <p class="gr-text-9 mb-0">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <p class="gr-text-9 mb-0">Salary for dental nurse is very competitive with increasing demand in the job market.</p>
           </div>
         </div>
         <!-- ./feature-widget ends -->
@@ -75,8 +88,8 @@
             <img src="assets/image/inner/icon-user-yellow.svg" alt="" class="w-auto">
           </div>
           <div class="card-texts pr-xl-10">
-            <h3 class="gr-text-6 mb-7 gr-text-exerpt">Casual dress code</h3>
-            <p class="gr-text-9 mb-0">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <h3 class="gr-text-6 mb-7 gr-text-exerpt">Flexible schedule</h3>
+            <p class="gr-text-9 mb-0">Select your preferred working hours, and work type via our nurse portal.</p>
           </div>
         </div>
         <!-- ./feature-widget ends -->
@@ -88,8 +101,8 @@
             <img src="assets/image/inner/icon-watch-red.svg" alt="" class="w-auto">
           </div>
           <div class="card-texts pr-xl-10">
-            <h3 class="gr-text-6 mb-7 gr-text-exerpt">Unlimited time off</h3>
-            <p class="gr-text-9 mb-0">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <h3 class="gr-text-6 mb-7 gr-text-exerpt">Better work-life balance</h3>
+            <p class="gr-text-9 mb-0">With so many things under your control, re-create your schedule <b>your way</b>.</p>
           </div>
         </div>
         <!-- ./feature-widget ends -->
@@ -101,8 +114,8 @@
             <img src="assets/image/inner/icon-keyhole-pink.svg" alt="" class="w-auto">
           </div>
           <div class="card-texts pr-xl-10">
-            <h3 class="gr-text-6 mb-7 gr-text-exerpt">Yearly bonuses</h3>
-            <p class="gr-text-9 mb-0">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <h3 class="gr-text-6 mb-7 gr-text-exerpt">You are in control</h3>
+            <p class="gr-text-9 mb-0">You have the power under your control. You're the captain of your own ship.</p>
           </div>
         </div>
         <!-- ./feature-widget ends -->
@@ -114,8 +127,8 @@
             <img src="assets/image/inner/icon-globe-blue.svg" alt="" class="w-auto">
           </div>
           <div class="card-texts pr-xl-10">
-            <h3 class="gr-text-6 mb-7 gr-text-exerpt">Global community</h3>
-            <p class="gr-text-9 mb-0">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <h3 class="gr-text-6 mb-7 gr-text-exerpt">More freedom</h3>
+            <p class="gr-text-9 mb-0">You have so many controls to steer. More options mean more freedom.</p>
           </div>
         </div>
         <!-- ./feature-widget ends -->
