--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -12,29 +12,29 @@
   </div> -->
   <div class="avatar1">
     <a href="https://codepen.io/MarioDesigns/">
-      <img src="assets/image/png/cute-tooth.png" alt="Skytsunami" />
+      <img src="assets/image/png/output-onlinegiftools.gif" alt="Skytsunami" />
     </a>
   </div>
   <div class="avatar2">
     <a href="https://codepen.io/MarioDesigns/">
-      <img src="assets/image/png/f1.png" alt="Skytsunami" />
+      <img src="assets/image/png/f2.png" alt="Skytsunami" />
     </a>
   </div>
   <div class="avatar3">
     <a href="https://codepen.io/MarioDesigns/">
-      <img src="assets/image/png/f2.png" alt="Skytsunami" />
+      <img src="assets/image/png/f7.png" alt="Skytsunami" />
     </a>
   </div>
   <div class="avatar4">
     <a href="https://codepen.io/MarioDesigns/">
-      <img src="assets/image/png/f4.png" alt="Skytsunami" />
+      <img src="assets/image/png/f5.png" alt="Skytsunami" />
     </a>
   </div>
 
   <div class="row align-items-center justify-content-center mid-content">
     <div class="col-lg-10 col-xl-9" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
       <div class="hero-content section-title light-mode-texts text-center">
-        <h4 class="pre-title text-green gr-text-12 text-uppercase mb-10">making your life easy</h4>
+        <h4 class="pre-title text-green gr-text-12 text-uppercase mb-10">HELPING YOU WILL ALL YOUR STAFFING REQUIREMENTS</h4>
         <h1 class="gr-text-2 font-weight-bold mb-12">Toothpick Dental Staff</h1>
         <!-- Search Component -->
 
@@ -87,7 +87,7 @@
 
 
 <!-- Fact Counter section -->
-<div class="fact-section bg-default-4 border-bottom pt-13 pt-lg-18 pb-7 pb-lg-17 " id="second-section">
+<!-- <div class="fact-section bg-default-4 border-bottom pt-13 pt-lg-18 pb-7 pb-lg-17 " id="second-section">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-4 col-md-6 col-sm-6 mb-9 mb-lg-0">
@@ -110,15 +110,15 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Locations section  -->
 <div class="location-section bg-default-4 pt-14 pb-7 py-lg-23">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-xl-6 col-lg-7 col-md-9">
         <div class="section-title text-center mb-11 mb-lg-19">
-          <h2 class="title gr-text-3 mb-7">Popular locations</h2>
-          <p class="gr-text-8 px-lg-8 mb-0">With lots of unique blocks, you can easily build a page easily without any coding. </p>
+          <h2 class="title gr-text-3 mb-7">We Care About Your Business</h2>
+          <p class="gr-text-8 px-lg-8 mb-0">Here at Toothpick Dental Staff, we provide reliable, fully qualified, experienced and passionate locum dental nurses with excellent customer services to help your dental practice with all your staffing requirements. </p>
         </div>
       </div>
     </div>
@@ -171,8 +171,10 @@
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-6">
         <div class="section-title mb-13 mb-lg-21">
-          <h2 class="title gr-text-3 mb-7">Work around very talented people.</h2>
-          <p class="gr-text-8">With lots of unique blocks, you can easily build <br class="d-none d-lg-block">a page easily without any coding. </p>
+          <h2 class="title gr-text-3 mb-7">Professional and Competent.</h2>
+          <p class="gr-text-8">Our staff are well trained to use computer technology, including SOE Exact, R4 Dental programmes and some software for orthodontic.
+             <!-- <br class="d-none d-lg-block">a page easily without any coding.  -->
+           </p>
         </div>
         <div class="image-left pr-xl-6" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
           <img src="./assets/image/coworking/jpg/content1-img1.jpg" alt="" class="w-100 rounded-10">
@@ -232,8 +234,8 @@
     <div class="row align-items-center justify-content-center">
       <div class="col-md-10 col-lg-6 col-xl-5">
         <div class="section-title content-text mb-13 mb-lg-16">
-          <h2 class="title gr-text-3 mb-6">We are always here for your backup.</h2>
-          <p class="gr-text-8">We share common trends and strategies for improving your rental income.</p>
+          <h2 class="title gr-text-3 mb-6">We prioritize training.</h2>
+          <p class="gr-text-8"> We provide regular training to ensure our staff's competence, professionalism and expertise to provide care and support to the team at your establishment.</p>
         </div>
         <div class="content-widget">
           <div class="row">
