--- a/src/app/_components/header/header.component.css
+++ b/src/app/_components/header/header.component.css
@@ -1,4 +1,22 @@
 nav img{
-  height:90px;
+  min-height:150px;
+  max-height:150px;
   width: auto;
+}
+
+
+@media (max-width: 820px) {
+  nav img{
+    min-height:100px;
+    max-height:100px;
+    width: auto;
+  }
+}
+
+@media (max-width: 480px) {
+  nav img{
+    min-height:90px;
+    max-height:90px;
+    width: auto;
+  }
 }
