--- a/src/app/_pages/contact/contact.component.html
+++ b/src/app/_pages/contact/contact.component.html
@@ -1,6 +1,25 @@
 <app-header></app-header>
 
-<div class="inner-banner pt-29 pb-md-11 bg-default-2">
+
+<div class="inner-banner">
+  <div class="container">
+    <div class="row  justify-content-center mt-md-6 pt-24 pt-lg-29">
+      <div class="col-xl-8 col-lg-9">
+        <div class="px-md-12 text-center mb-11 mb-lg-14">
+          <h2 class="title gr-text-2 mb-9 mb-lg-12">Contact Us</h2>
+          <p class="gr-text-8 mb-0">Don't be a stranger.</p>
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="banner-fluid-image pt-lg-9">
+          <img src="./assets/image/inner/about-banner.png" alt="" class="w-100">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="inner-banner pt-29 pb-md-11 bg-default-2">
   <div class="container">
     <div class="row  justify-content-center pt-5">
       <div class="col-xl-8 col-lg-9">
@@ -11,7 +30,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Contact section  -->
 <div class=" pb-5 pb-md-15 bg-default-2 ">
   <div class="container">
