--- a/src/app/_pages/signin/signin.component.html
+++ b/src/app/_pages/signin/signin.component.html
@@ -1,6 +1,18 @@
 <app-header></app-header>
+<div class="inner-banner">
+  <div class="container">
+    <div class="row  justify-content-center mt-md-6 pt-24 pt-lg-29">
+      <div class="col-xl-8 col-lg-9">
+        <div class="px-md-12 text-center mb-11 mb-lg-14">
+          <h2 class="title gr-text-2 mb-9 mb-lg-12">Login</h2>
+          <p class="gr-text-8 mb-0">Sign in to get started.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-  <div class="sign-in bg-default-2">
+  <div class="sign-in">
     <!-- Header Brand Area -->
     <!-- <header class="site-header bg-white">
       <div class="container-fluid">
@@ -18,10 +30,10 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-7 col-lg-5 col-xl-4">
-          <div class="main-block py-25">
+          <div class="main-block ">
             <div class="form-title text-center">
-              <h2 class="title gr-text-2 mb-9">Login</h2>
-              <p class="gr-text-8 mb-13">To get started, you need to sign in here.</p>
+              <!-- <h2 class="title gr-text-2 mb-9">Login</h2>
+              <p class="gr-text-8 mb-13">To get started, you need to sign in here.</p> -->
             </div>
             <div class="login-form bg-white border rounded-10 px-8 py-8 shadow-1 mb-11">
               <form action="./">
