role-base authorization

--- a/src/app/_pages/signup-nurse/signup-nurse.component.html
+++ b/src/app/_pages/signup-nurse/signup-nurse.component.html
@@ -6,7 +6,7 @@
     <div class="row  justify-content-center pt-5">
       <div class="col-xl-8 col-lg-9">
         <div class="px-md-15 text-center">
-          <h2 class="title gr-text-2 mb-9">Sign Up for Pratice</h2>
+          <h2 class="title gr-text-2 mb-9">Sign Up for Nurse</h2>
           <p class="gr-text-8 mb-13">Registering is simple. Fill up the form and submit.</p>
         </div>
       </div>
