--- a/src/app/_components/careerform/careerform.component.html
+++ b/src/app/_components/careerform/careerform.component.html
@@ -1,1 +1,90 @@
-<p>careerform works!</p>
+<div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12">
+        <div class="login-form bg-white border-gray-3 px-8 pt-8 pb-9 px-sm-11 py-sm-11 shadow-1 rounded-10">
+          <form action="./">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group mb-7">
+                  <label for="name" class="gr-text-11 font-weight-bold text-blackish-blue">Full Name</label>
+                  <input class="form-control gr-text-11 border" type="text" id="name" placeholder="i.e. John Doe">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group mb-7">
+                  <label for="email" class="gr-text-11 font-weight-bold text-blackish-blue">Phone</label>
+                  <input class="form-control gr-text-11 border" type="text" id="email" placeholder="i.e. +44-07444831232">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group mb-7">
+                  <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Email</label>
+                  <input class="form-control gr-text-11 border" type="text" id="phone" placeholder="i.e. contact@mail.com">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group mb-7">
+                  <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Are you GDC Registered?</label>
+                  <!-- <input class="form-control gr-text-11 border" type="text" id="subject" placeholder="i.e. John Doe"> -->
+                  <select class="form-control gr-text-11 border mb-7" type="text" id="subject" name="no_of_days">
+                    <option value="" disabled selected>i.e. Yes or No</option>
+                    <option value="1">Yes</option>
+                    <option value="0">No</option>
+                  </select>
+
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group mb-7">
+                  <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">No. of Days Available Per Week</label>
+                  <select class="form-control gr-text-11 border mb-7" type="text" id="subject" name="no_of_days">
+                    <option value="" disabled selected>i.e. 1,2,3,..</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group mb-7">
+                  <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Do You Drive?</label>
+                  <select class="form-control gr-text-11 border mb-7" type="text" id="subject" name="no_of_days">
+                    <option value="" disabled selected>i.e. Yes or No</option>
+                    <option value="1">Yes</option>
+                    <option value="0">No</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group mb-7">
+                  <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Do You Have Access To Car?</label>
+                  <select class="form-control gr-text-11 border mb-7" type="text" id="subject" name="no_of_days">
+                    <option value="" disabled selected>i.e. Yes or No</option>
+                    <option value="1">Yes</option>
+                    <option value="0">No</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group mb-7">
+                  <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Your Postcode</label>
+                  <input class="form-control gr-text-11 border" type="text" id="subject" placeholder="i.e. RG30 4LX">
+                </div>
+              </div>
+              <div class="col-xs-3">
+                <div class="form-group button-block mt-3 ">
+                  <button class="form-btn btn btn-primary w-100">Apply</button>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
