--- a/src/app/_pages/career/career.component.html
+++ b/src/app/_pages/career/career.component.html
@@ -9,6 +9,12 @@
           <p class="gr-text-8 mb-0">If you are looking for a change of scenery within the dental industry, then locuming would be a great opportunity to do that. Being an agency dental nurse is a very rewarding job.</p>
         </div>
       </div>
+      <div class="col-12">
+        <div class="banner-fluid-image pt-lg-9">
+          <app-careerform></app-careerform>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
@@ -26,21 +32,19 @@
   </div>
 </div> -->
 <!-- Video Section -->
-<div class="video-section bg-image py-28 py-lg-35 dark-mode-texts " style="background-image: url(assets/image/inner/video-bg-2.png);">
+<!-- <div class="video-section bg-image py-28 py-lg-35 dark-mode-texts " style="background-image: url(assets/image/inner/video-bg-2.png);">
   <div class="container">
     <div class="row align-items-center justify-content-center">
       <div class="col-xl-6 col-lg-7 col-md-8">
         <div class="text-center video-content">
-          <!-- .video-btn starts-->
           <a class="video-play-icon mx-auto circle-120 bg-primary gr-text-7 text-white my-lg-8 gr-hover-y focus-reset" data-fancybox="" href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" tabindex="-1">
             <i class="icon icon-triangle-right-17-2"></i>
           </a>
-          <!--/.video-btn starts-->
         </div>
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- Feature Section -->
 <div class="pb-2 pb-lg-9 pt-13 pt-lg-24 bg-default-6 ">
   <div class="container">
