--- a/src/app/_pages/signin/signin.component.html
+++ b/src/app/_pages/signin/signin.component.html
@@ -36,17 +36,26 @@
               <p class="gr-text-8 mb-13">To get started, you need to sign in here.</p> -->
             </div>
             <div class="login-form bg-white border rounded-10 px-8 py-8 shadow-1 mb-11">
-              <form action="./">
+              <form class="comment-one__form contact-form-validated"
+              [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-group">
                   <label for="email" class="gr-text-11 font-weight-bold text-blackish-blue">Email</label>
-                  <input class="form-control gr-text-11 border" type="email" id="email" placeholder="i.e. john@mail.com">
+                  <input formControlName="username" class="form-control" type="text" placeholder="i.e. john@mail.com">
+                  <div *ngIf="submitted && f.username.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.username.errors.required">Username is required.</div>
+                  </div>
+
                 </div>
                 <div class="form-group forget-block">
                   <div class="d-flex justify-content-between">
                     <label for="password" class="gr-text-11 font-weight-bold text-blackish-blue">Password</label>
                     <a class="forget-link" href="resetpassword">Forgot Password?</a>
                   </div>
-                  <input id="password" class="form-control gr-text-11 border" type="password" placeholder="********">
+                  <input formControlName="password" id="password" class="form-control gr-text-11 border" type="password" placeholder="********">
+                  <div *ngIf="submitted && f.password.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.password.errors.required">Password is required.</div>
+                  </div>
+
                 </div>
                 <!-- <div class="form-check mb-7">
               <input class="form-check-input" type="checkbox" value="" id="formCheck1">
