--- a/src/app/_pages/signup-nurse/signup-nurse.component.html
+++ b/src/app/_pages/signup-nurse/signup-nurse.component.html
@@ -21,69 +21,80 @@
     <div class="row justify-content-center">
       <div class="col-12">
         <div class="login-form bg-white border-gray-3 px-8 pt-8 pb-9 px-sm-11 py-sm-11 shadow-1 rounded-10">
-          <form action="./">
+          <form [formGroup]="signup" (ngSubmit)="onSubmit()">
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group mb-7">
-                  <label for="name" class="gr-text-11 font-weight-bold text-blackish-blue">Practice Name</label>
-                  <input class="form-control gr-text-11 border" type="text" id="name" placeholder="i.e. John Doe">
+                  <label for="name" class="gr-text-11 font-weight-bold text-blackish-blue">Full Name</label>
+                  <input formControlName="full_name" class="form-control gr-text-11 border" type="text"
+                    placeholder="i.e. John Doe">
+                  <div *ngIf="submitted && f.full_name.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.full_name.errors.required">Full Name is required.</div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group mb-7">
-                  <label for="email" class="gr-text-11 font-weight-bold text-blackish-blue">Practice Email</label>
-                  <input class="form-control gr-text-11 border" type="text" id="email" placeholder="i.e. contact@mail.com">
+                  <label for="email" class="gr-text-11 font-weight-bold text-blackish-blue">Email</label>
+                  <input formControlName="email" class="form-control gr-text-11 border" type="text"
+                    placeholder="i.e. contact@mail.com">
+                  <div *ngIf="submitted && f.email.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.email.errors.required">Email is required.</div>
+                    <div *ngIf="f.email.errors.pattern">Email must be valid.</div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group mb-7">
                   <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Phone</label>
-                  <input class="form-control gr-text-11 border" type="text" id="phone" placeholder="i.e. +44-07444831232">
+                  <input formControlName="contact" class="form-control gr-text-11 border" type="text"
+                    placeholder="i.e. +44-07444831232">
+                  <div *ngIf="submitted && f.contact.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.contact.errors.required">Phone is required.</div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group mb-7">
-                  <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Your Full Name</label>
-                  <input class="form-control gr-text-11 border" type="text" id="subject" placeholder="i.e. John Doe">
+                  <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Password</label>
+                  <input formControlName="password" class="form-control gr-text-11 border" type="password"
+                    placeholder="i.e. sdfG@_gt">
+                  <div *ngIf="submitted && f.password.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.password.errors.required">Password is required</div>
+                    <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group mb-7">
-                  <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Postcode</label>
-                  <input class="form-control gr-text-11 border" type="text" id="phone" placeholder="i.e. AA9A 9AA">
+                  <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Confirm password</label>
+                  <input formControlName="confirmpassword" class="form-control gr-text-11 border" type="password" placeholder="sdfG@_gt">
+                  <div *ngIf="submitted && f.confirmpassword.errors" class="mb-2 text-danger">
+                    <div *ngIf="f.confirmpassword.errors.required">Password is required</div>
+                    <div *ngIf="f.confirmpassword.errors.mustMatch">Passwords must match</div>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="form-group mb-7">
-                  <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Address</label>
-                  <input class="form-control gr-text-11 border" type="text" id="subject" placeholder="i.e. 77 Elvaston Way, Reading">
-                </div>
+                <!-- <input formControlName="role" class="form-control gr-text-11 border" type="text"
+                placeholder="i.e. +44-07444831232" value="2" > -->
+
               </div>
-              <div class="col-md-6">
-                <div class="form-group mb-7">
-                  <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">GDC</label>
-                  <input class="form-control gr-text-11 border" type="text" id="phone" placeholder="i.e. AA9A 9AA">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group mb-7">
-                  <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Mobile Number</label>
-                  <input class="form-control gr-text-11 border" type="text" id="subject" placeholder="i.e. 77 Elvaston Way, Reading">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group mb-7">
-                  <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Time for Payment</label>
-                  <input class="form-control gr-text-11 border" type="text" id="subject" placeholder="i.e. 77 Elvaston Way, Reading">
-                </div>
-              </div>
-              <div class="col-md-6">
-              </div>
+
               <div class="col-xs-3">
                 <div class="form-group button-block mt-3 ">
                   <button class="form-btn btn btn-primary w-100">Register</button>
                 </div>
+
               </div>
+              <div class="col-xs-3">
+                <div class="form-group button-block mt-3 ">
+
+                <span (click)="clear()" class="form-btn btn btn-primary w-100">Reset Form</span>
+
+              </div>
+              </div>
+
             </div>
           </form>
         </div>
