--- a/src/app/_pages/signup-nurse/signup-nurse.component.html
+++ b/src/app/_pages/signup-nurse/signup-nurse.component.html
@@ -55,6 +55,8 @@
                 </div>
               </div>
               <div class="col-md-6">
+                </div>
+              <div class="col-md-6">
                 <div class="form-group mb-7">
                   <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Password</label>
                   <input formControlName="password" class="form-control gr-text-11 border" type="password"
