--- a/src/app/_pages/signup-nurse/signup-nurse.component.html
+++ b/src/app/_pages/signup-nurse/signup-nurse.component.html
@@ -42,6 +42,10 @@
                     <div *ngIf="f.email.errors.required">Email is required.</div>
                     <div *ngIf="f.email.errors.pattern">Email must be valid.</div>
                   </div>
+                  <div *ngIf="emailExists" class="mb-2 text-danger">
+                  <div>An account with this email already.</div>
+                </div>
+
                 </div>
               </div>
               <div class="col-md-6">
