--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -51,8 +51,8 @@
           <div class="single-footer mb-13 mb-lg-9">
             <p class="footer-title gr-text-11 mb-7">Contact us</p>
             <ul class="footer-list list-unstyled">
-              <li class="py-2"><a class="gr-text-9 text-primary font-weight-bold hover-underline active" href="mailto:support@grayic.com">support@grayic.com</a></li>
-              <li class="py-2"><a class="gr-text-9 text-primary font-weight-bold hover-underline active" href="tel:+133-394-3439-1435">+133-394-3439-1435</a></li>
+              <li class="py-2"><a class="gr-text-9 text-primary font-weight-bold hover-underline active" href="mailto:booking@toothpickdentalstaff.com">booking@toothpickdentalstaff.com</a></li>
+              <li class="py-2"><a class="gr-text-9 text-primary font-weight-bold hover-underline active" href="tel:+44 07444831232">+44 07444831232</a></li>
             </ul>
           </div>
         </div>
@@ -63,16 +63,16 @@
         <div class="col-lg-6 mb-4" >
           <h4>Toothpick Dental Staff</h4>
           <p class="copyright-text gr-text-11 mb-6 mb-lg-0 gr-text-color-opacity text-center text-lg-left">
-            © 2020 Copyright, All Right Reserved,
+            © 2022 Copyright, All Right Reserved,
             <br/> Build by <a href="https://bitmosys.com/">Bitmosys Labs</a>
             <!-- <i class="icon icon-heart-2-2 text-green align-middle ml-2"></i> -->
           </p>
         </div>
         <div class="col-lg-6 text-center text-lg-right">
           <ul class="social-icons list-unstyled mb-0 mr-n9">
-            <li class="gr-text-7"><a href="https://www.facebook.com/toothpickdentalstaff" class="gr-text-color-opacity mr-9"><i class="icon icon-logo-facebook"></i></a></li>
-            <li class="gr-text-7"><a href="https://www.instagram.com/toothpickdental/" class="gr-text-color-opacity mr-9"><i class="icon icon-instant-camera-2"></i></a></li>
-            <li class="gr-text-7"><a href="https://www.linkedin.com/company/toothpickdentalstaff/" class="gr-text-color-opacity mr-9"><i class="icon icon-logo-linkedin"></i></a></li>
+            <li class="gr-text-7"><a href="https://www.facebook.com/toothpickdentalstaff" target="_blank" class="gr-text-color-opacity mr-9"><i class="icon icon-logo-facebook"></i></a></li>
+            <li class="gr-text-7"><a href="https://www.instagram.com/toothpickdental/" target="_blank" class="gr-text-color-opacity mr-9"><i class="icon icon-instant-camera-2"></i></a></li>
+            <li class="gr-text-7"><a href="https://www.linkedin.com/company/toothpickdentalstaff/" target="_blank" class="gr-text-color-opacity mr-9"><i class="icon icon-logo-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
