cookie clear and email verification

--- a/src/app/_pages/signup-practice/signup-practice.component.html
+++ b/src/app/_pages/signup-practice/signup-practice.component.html
@@ -89,7 +89,7 @@
               </div>
               <div class="col-xs-3">
                 <div class="form-group button-block mt-3 ">
-                  <span (click)="clear()" class="form-btn btn btn-primary w-100">Reset Form</span>
+                  <span (click)="clear()" class="form-btn btn btn-danger w-100">Reset Form</span>
                 </div>
               </div>
 
