--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -10,7 +10,7 @@
       <img src="assets/image/l5/png/l5-dot-shape.png" alt="">
     </div>
   </div> -->
-  <div class="avatar1">
+  <!-- <div class="avatar1">
     <a href="https://codepen.io/MarioDesigns/">
       <img src="assets/image/png/output-onlinegiftools.gif" alt="Skytsunami" />
     </a>
@@ -29,7 +29,7 @@
     <a href="https://codepen.io/MarioDesigns/">
       <img src="assets/image/png/f5.png" alt="Skytsunami" />
     </a>
-  </div>
+  </div> -->
 
   <div class="row align-items-center justify-content-center mid-content">
     <div class="col-lg-10 col-xl-9" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
@@ -80,9 +80,9 @@
 </div>
 </div>
 </div>
-<a href="#second-section" class="circle-40 border border-black gr-abs-bx-center mx-auto mt-13 goto">
+<!-- <a href="#second-section" class="circle-40 border border-black gr-abs-bx-center mx-auto mt-13 goto">
   <i class="fas fa-chevron-down text-black mx-auto gr-text-8"></i>
-</a>
+</a> -->
 </div>
 
 
