--- a/src/app/_pages/signup/signup.component.html
+++ b/src/app/_pages/signup/signup.component.html
@@ -19,51 +19,27 @@
 <div class=" pb-5 pb-md-33 bg-default-2 ">
   <div class="container">
     <div class="row justify-content-center">
-<div class="col-12">
-  <div class="login-form bg-white border-gray-3 px-8 pt-8 pb-9 px-sm-11 py-sm-11 shadow-1 rounded-10">
-    <form action="./">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group mb-7">
-            <label for="name" class="gr-text-11 font-weight-bold text-blackish-blue">First & Last Name</label>
-            <input class="form-control gr-text-11 border" type="text" id="name" placeholder="i.e. John Doe">
+      <div class="col-12">
+        <div class="login-form bg-white border-gray-3 px-8 pt-8 pb-9 px-sm-11 py-sm-11 shadow-1 rounded-10">
+
+          <div class="row location-filter-form d-flex flex-wrap justify-content-center">
+            <div class="col-md-4 col-sm-4 col-xs-4 mb-4">
+              <a href="signuppractice">
+                <button type="submit" class="btn btn-primary search-btn">Sign Up as Practice</button>
+              </a>
+            </div>
+            <div class="col-md-4 col-sm-4 col-xs-4 mb-4">
+              <a href="signupnurse">
+                <button type="submit" class="btn btn-primary search-btn">Sign Up as DCP</button>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group mb-7">
-            <label for="email" class="gr-text-11 font-weight-bold text-blackish-blue">Email</label>
-            <input class="form-control gr-text-11 border" type="text" id="email" placeholder="i.e. john@mail.com">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group mb-7">
-            <label for="phone" class="gr-text-11 font-weight-bold text-blackish-blue">Phone Number</label>
-            <input class="form-control gr-text-11 border" type="text" id="phone" placeholder="i.e. +1-234-567-7890">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group mb-7">
-            <label for="subject" class="gr-text-11 font-weight-bold text-blackish-blue">Subject</label>
-            <input class="form-control gr-text-11 border" type="text" id="subject" placeholder="i.e. I need a help">
-          </div>
-        </div>
-        <div class="col-md-12">
-          <div class="form-group mb-7">
-            <label for="message" class="gr-text-11 font-weight-bold text-blackish-blue">Message</label>
-            <textarea name="textblock" id="message" class="form-control gr-text-11 border-gray-3 gr-textarea-height"></textarea>
-          </div>
-        </div>
-        <div class="col-xs-3">
-          <div class="form-group button-block mt-3 ">
-            <button class="form-btn btn btn-primary w-100">Send</button>
-          </div>
+
+
         </div>
       </div>
-    </form>
+    </div>
   </div>
-</div>
-</div>
-</div>
 </div>
 
 <app-footer></app-footer>
